generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  hash      String
  hashedRt  String?
  username  String   @unique
  avatar    String?
  status    Int      @default(1)
  roles     Role[]   @relation("UserRoles")

  @@map("users")
}

model Log {
  id        Int      @id @default(autoincrement())
  level     String
  message   String
  meta      Json?
  timestamp DateTime @default(now())
}

model Role {
  id     Int     @id @default(autoincrement())
  name   String
  status Int     @default(1)
  label  String
  order  Int?
  desc   String?

  permissions Permission[]  @relation("RolePermissions")
  user        User[]    @relation("UserRoles")
}

model Permission {
  id        String       @id @default(cuid())
  name      String       @unique
  icon      String?
  label     String?
  component String
  route     String
  // 1: 目录 2: 菜单 3: 按钮
  type      Int          @default(1)
  // true: 启用 false: 禁用
  hide      Boolean      @default(false)
  // true: 启用 false: 禁用
  status    Int          @default(1)
  order     Int?
  parentId  String?
  children  Permission[] @relation("ChildToParent")
  parent    Permission?  @relation("ChildToParent", fields: [parentId], references: [id])

  roles Role[] @relation("RolePermissions")
}

enum BasicStatus {
  DISABLE
  ENABLE
}
