//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  hash String [not null]
  hashedRt String
  username String [unique, not null]
  avatar String
  status Int [not null, default: 1]
  roles Role [not null]
}

Table Log {
  id Int [pk, increment]
  level String [not null]
  message String [not null]
  meta Json
  timestamp DateTime [default: `now()`, not null]
}

Table Role {
  id Int [pk, increment]
  name String [not null]
  status Int [not null, default: 1]
  label String [not null]
  order Int
  desc String
  permissions Permission [not null]
  user users [not null]
}

Table Permission {
  id String [pk]
  name String [unique, not null]
  icon String
  label String
  component String [not null]
  route String [not null]
  type Int [not null, default: 1]
  hide Boolean [not null, default: false]
  status Int [not null, default: 1]
  order Int
  parentId String
  children Permission [not null]
  parent Permission
  roles Role [not null]
}

Table UserRoles {
  rolesId Int [ref: > Role.id]
  userId Int [ref: > users.id]
}

Table RolePermissions {
  permissionsId String [ref: > Permission.id]
  rolesId Int [ref: > Role.id]
}

Enum BasicStatus {
  DISABLE
  ENABLE
}

Ref: Permission.parentId > Permission.id